# boids-c

./: .gitignore  CMakeLists.txt  README.md  build.sh  new-build.sh
src/: boids.c  boids.h  main.c  normal_random.c  normal_random.h  spatial_hash.c  spatial_hash.h
